# prediction-algorithm

./: .gitignore  README.md
prediction-bridge/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
prediction-bridge/app/: __init__.py  main.py
prediction-bridge/app/api/: dependencies.py  health.py  notifications.py  tasks.py
prediction-bridge/app/core/: config.py  errors.py  logging.py
prediction-bridge/app/models/: schemas.py  task_store.py
prediction-bridge/app/services/: archive.py  feishu_client.py  minio_client.py  pipeline.py  predictor_client.py  report_renderer.py
prediction-bridge/app/templates/: prediction.md.j2
prediction-bridge/config/: config.example.yaml
prediction-bridge/deploy/: Dockerfile  Dockerfile.base  docker-compose.yaml
prediction-bridge/deploy/systemd/: prediction-bridge.service
prediction-bridge/scripts/: run_dev.sh  smoke_pipeline.py
prediction-bridge/tests/: conftest.py  test_archive.py  test_feishu_client.py  test_notifications_api.py  test_predictor_client.py  test_report_renderer.py
